--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,17 +18,17 @@ requirements:
     - cmake
     - make
     - pkg-config
+    - python  # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - python
     - cyclus {{ version }}
     # C/C++ Libraries
     - libboost-headers
     - hdf5
   run:
-    - python
     - cyclus {{ version }}
 
 test:
