--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 3
-  skip: True  # [win or osx or py<=27]
+  skip: True  # [win or osx or py<310]
   detect_binary_files_with_prefix: true
 
 requirements:
